--- a/.github/workflows/deploy-snapshot.yml
+++ b/.github/workflows/deploy-snapshot.yml
@@ -1,23 +1,24 @@
-name: Deploy as snapshot
-
-on:
-  push:
-    branches: [ main, 0.8.x ]
-
 jobs:
   build:
     if: github.repository == 'mirromutth/r2dbc-mysql'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Temurin 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: maven
-      - name: Deploy to repository
-        env:
-          SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-        run: ./mvnw -B clean deploy -Psnapshot -s ./settings.xml -DskipITs -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set up Temurin 8
+      uses: actions/setup-java@v2
+      with:
+        cache: maven
+        distribution: temurin
+        java-version: 8
+    - continue-on-error: true
+      env:
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
+      name: Deploy to repository
+      run: ./mvnw -B clean deploy -Psnapshot -s ./settings.xml -DskipITs -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+name: Deploy as snapshot
+on:
+  repository_dispatch:
+    types: trigger-ga___deploy-snapshot.yml
