--- a/.github/workflows/mysql5-6.yml
+++ b/.github/workflows/mysql5-6.yml
@@ -1,25 +1,31 @@
-name: MySQL 5.6
-
-on: [ pull_request ]
-
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Temurin 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: maven
-      - name: Shutdown the Default MySQL
-        run: sudo service mysql stop
-      - name: Set up MySQL 5.6
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          mysql version: 5.6
-          mysql database: r2dbc
-          mysql root password: ${{ secrets.DB_PASSWORD }}
-      - name: Integration test with MySQL 5.6
-        run: ./mvnw -B verify -Dmaven.javadoc.skip=true -Dmaven.surefire.skip=true -Dtest.mysql.password=${{ secrets.DB_PASSWORD }} -Dtest.mysql.version=5.6 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set up Temurin 8
+      uses: actions/setup-java@v2
+      with:
+        cache: maven
+        distribution: temurin
+        java-version: 8
+    - continue-on-error: true
+      name: Shutdown the Default MySQL
+      run: sudo service mysql stop
+    - continue-on-error: true
+      name: Set up MySQL 5.6
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        mysql database: r2dbc
+        mysql root password: ${{ secrets.DB_PASSWORD }}
+        mysql version: 5.6
+    - continue-on-error: true
+      name: Integration test with MySQL 5.6
+      run: ./mvnw -B verify -Dmaven.javadoc.skip=true -Dmaven.surefire.skip=true -Dtest.mysql.password=${{
+        secrets.DB_PASSWORD }} -Dtest.mysql.version=5.6 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+name: MySQL 5.6
+on:
+  repository_dispatch:
+    types: trigger-ga___mysql5-6.yml
