--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,17 +1,20 @@
-name: Unit tests
-
-on: [ pull_request ]
-
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Temurin 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: maven
-      - name: Unit test with Maven
-        run: ./mvnw -B test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set up Temurin 8
+      uses: actions/setup-java@v2
+      with:
+        cache: maven
+        distribution: temurin
+        java-version: 8
+    - continue-on-error: true
+      name: Unit test with Maven
+      run: ./mvnw -B test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+name: Unit tests
+on:
+  repository_dispatch:
+    types: trigger-ga___unit-tests.yml
